Custom promise-returning functions should not throw if callee has not the expected type https://bugs.webkit.org/show_bug.cgi?id=162011

Patch by Youenn Fablet <youenn@apple.com> on 2016-09-16
Reviewed by Sam Weinig.

Source/JavaScriptCore:

* JavaScriptCore.xcodeproj/project.pbxproj: Making JSPromiseConstructor.h private

Source/WebCore:

Covered by added test.

Updating code generator to handle this case.
Cleaning related getUserMedia implementation.

* CMakeLists.txt: Removing Modules/mediastream/MediaDevices.js.
* DerivedSources.make: Removing Modules/mediastream/MediaDevices.js.
* Modules/mediastream/MediaDevices.idl: Cleaning IDL definition
* Modules/mediastream/MediaDevices.js: Removing error throwing and so removing file.
* Modules/mediastream/NavigatorUserMedia.js: getUsermMediaFromJS to getUserMedia.
* WebCore.xcodeproj/project.pbxproj: Removing Modules/mediastream/MediaDevices.js.
* bindings/js/JSDOMPromise.cpp:
(WebCore::createRejectedPromiseWithTypeError): Helper routine.
* bindings/js/JSDOMPromise.h:
* bindings/js/WebCoreBuiltinNames.h: getUsermMediaFromJS to getUserMedia.
* bindings/scripts/CodeGeneratorJS.pm:
(GenerateImplementation): Rejecting promise in case of failing castedThis, but only for custom functions since
they are handled differently for non custom methods.
(GenerateFunctionCastedThis):
* bindings/scripts/test/JS/JSTestObj.cpp:
* bindings/scripts/test/JS/JSTestObj.h:
* bindings/scripts/test/TestObj.idl: Adding custom promise test.

LayoutTests:

* fast/mediastream/MediaDevices-getUserMedia-expected.txt:
* fast/mediastream/MediaDevices-getUserMedia.html: Enusing calling getUserMedia on something else than MediaDevices does not throw.
* http/tests/media/media-stream/disconnected-frame-already-expected.txt:

Canonical link: https://commits.webkit.org/180186@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206011 268f45cc-cd09-0410-ab3c-d52691b4dbfc