Source/WebCore/ForwardingHeaders/runtime/JSPromiseConstructor.h
@@ -1,0 +1,2 @@
+#pragma once
+#include <JavaScriptCore/JSPromiseConstructor.h>
