Source/WebCore/Modules/mediastream/NavigatorUserMedia.js
@@ -30,8 +30,8 @@ function webkitGetUserMedia(options, successCallback, errorCallback)
     "use strict";
 
     // FIXME: We should raise a DOM unsupported exception if there is no navigator and properly detect whether method is not called on a Navigator object.
-    if (!(this.mediaDevices && this.mediaDevices.@getUserMediaFromJS))
-        throw new @TypeError("The implementation did not support the requested type of object or operation.");
+    if (!(this.mediaDevices && this.mediaDevices.@getUserMedia))
+        throw @makeThisTypeError("Navigator", "webkitGetUserMedia");
 
     if (arguments.length < 3)
         throw new @TypeError("Not enough arguments");
@@ -44,5 +44,5 @@ function webkitGetUserMedia(options, successCallback, errorCallback)
     if (typeof errorCallback !== "function")
         throw new @TypeError("Argument 3 ('errorCallback') to Navigator.webkitGetUserMedia must be a function");
 
-    this.mediaDevices.@getUserMediaFromJS(options).@then(successCallback, errorCallback);
+    this.mediaDevices.@getUserMedia(options).@then(successCallback, errorCallback);
 }
